--- a/.github/workflows/quick-test.yml
+++ b/.github/workflows/quick-test.yml
@@ -17,7 +17,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: install dependencies
-        run: apk add autoconf automake bash build-base cmake libtool libucontext-dev linux-headers openssl-dev clang16 libc++-dev
+        run: |
+          apk add autoconf automake bash build-base cmake libtool libucontext-dev linux-headers openssl-dev clang16 libc++-dev
+          modprobe vhost_vsock
+          lsmod | grep vsock
       - name: super-test
         run: ./super-test.sh quick clang-16
   Linux-clang:
@@ -47,6 +50,8 @@ jobs:
             sudo apt-get update
             sudo apt-get remove clang-14 libc++1-14 libc++abi1-14 libc++-14-dev libc++abi-14-dev libunwind-14 libunwind-14-dev
             sudo apt-get install -y build-essential git zlib1g-dev cmake libssl-dev clang-${{ matrix.clang }} libc++-${{ matrix.clang }}-dev libc++abi-${{ matrix.clang }}-dev ${{ matrix.libunwind }}
+            sudo modprobe vhost_vsock
+            lsmod | grep vsock
       - name: test
         run: |
             export CC=clang-${{ matrix.clang }}
@@ -65,6 +70,8 @@ jobs:
         run: |
             export DEBIAN_FRONTEND=noninteractive
             sudo apt-get install -y build-essential git zlib1g-dev cmake libssl-dev ${{ matrix.compiler }}
+            sudo modprobe vhost_vsock
+            lsmod | grep vsock
       - name: super-test ${{ matrix.compiler }}
         run: |
             # librt is used for timer_create in the unit tests for lock tracking (mutex-test.c++).
